--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -220,7 +220,7 @@
 					you wish to join the Chancel choir, you may contact Erik Carlson at 212-862-
 					4940.
 					</p>
-					<img src="pics/choir2.jpg" style="width:50vw; height: 40vh;">
+					<img src="pics/choir2.jpg" style="width:100%; height:100%;">
 					<hr>
 
 					<h3 class="mission-sub-border">Voices of Praise Contemporary Choir</h3>
@@ -247,7 +247,7 @@
 					on other special occasions.
 					</p>
 
-					<img src="pics/bells.png" style="width:50vw; height: 40vh;">
+					<img src="pics/bells.png" style="width:100%; height: 100%;">
 					<hr>
 
 					<h3 class="mission-sub-border">The Organ of St. Philip’s</h3>
@@ -284,6 +284,8 @@
 					Philip’s Church, please consider making a donation. Please make any checks
 					payable to “St. Philip’s Church” and write “organ restoration” in the memo.
 					</p>
+
+					<img src="pics/organ.jpg" style="width:100%; height: 100%;">
 
 					<hr>
 
