--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -80,6 +80,9 @@
 		and access is granted weekdays during parish office hours as well as before,
 		during and after Sunday worship services. You can schedule a special program
 		or event in the garden by contacting the Parish Administrator.
+		<br>
+		<br>
+		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
@@ -137,16 +140,14 @@
 <!-- Services -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Courtyard Garden
+		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Undercroft
 			</h2>
 		<p class="mission-top-sub about-sub">			
-		The St. Philip’s courtyard garden is a peaceful oasis from the bustling sights and
-		sounds of the city. Amidst trees and flowers, birds and squirrels the garden
-		provides a additional variety of sanctuary to contemplate God’s loving nature and
-		presence in the quiet stillness. The garden is a resource for all the community
-		and access is granted weekdays during parish office hours as well as before,
-		during and after Sunday worship services. You can schedule a special program
-		or event in the garden by contacting theParish Administrator.
+		Offers a full kitchen for keeping food warm as well as male and female restrooms.
+		A discrete number of table and chairs are included in the rental license.
+		<br>
+		<br>
+		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
@@ -210,17 +211,19 @@
 <!-- Services -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Courtyard Garden
+		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Nave
 			</h2>
 		<p class="mission-top-sub about-sub">			
-		The St. Philip’s courtyard garden is a peaceful oasis from the bustling sights and
-		sounds of the city. Amidst trees and flowers, birds and squirrels the garden
-		provides a additional variety of sanctuary to contemplate God’s loving nature and
-		presence in the quiet stillness. The garden is a resource for all the community
-		and access is granted weekdays during parish office hours as well as before,
-		during and after Sunday worship services. You can schedule a special program
-		or event in the garden by contacting theParish Administrator.
+		Is represented by the pews in which our parishioners sit. The splendor of our main
+		worship space with its stained glass windows should serve as the perfect backdrop for any
+		event that requires a room of this size.
+		<br>
+		<br>
+		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
+
+		<img src="./pics/nave side.jpg" style="width:50%; height: 50%; margin: auto; text-align: center; image-orientation: 0deg; display: block; transform: rotate(90deg); margin-top: 10%;">
+
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
@@ -289,17 +292,17 @@
 <!-- Services -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Courtyard Garden
+		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Sanctuary
 			</h2>
 		<p class="mission-top-sub about-sub">			
-		The St. Philip’s courtyard garden is a peaceful oasis from the bustling sights and
-		sounds of the city. Amidst trees and flowers, birds and squirrels the garden
-		provides a additional variety of sanctuary to contemplate God’s loving nature and
-		presence in the quiet stillness. The garden is a resource for all the community
-		and access is granted weekdays during parish office hours as well as before,
-		during and after Sunday worship services. You can schedule a special program
-		or event in the garden by contacting theParish Administrator.
+		The raised portion for the front part of the church houses our altar, organ, and
+		choirs. This is our sanctuary. Weekly and daily services as well as weddings, funerals and
+		numerous films.
+		<br>
+		<br>
+		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
+		<img src="./pics/sanct.jpg" style="width: 50%; margin: auto; text-align: center; display: block;">
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
