--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -84,6 +84,8 @@
 		<br>
 		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
+
+		<img src="./pics/garden.jpg" style="margin: auto; display: block;">
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
