--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -59,32 +59,40 @@
 </div>
 </div>
 
+
+
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Warriors of the Dream</h2>
-			<article class="ministries-content">
-				<p>The Warriors of the Dream project is aimed at forming a healing and transformative community of youth in Harlem through dialogue, recreation, the arts and mentorship. All youth from elementary school to high school are welcome.<br>
-			</article>
-	</div>
-</section>
+<header style="margin-bottom: 8px;"></header>
 
-		<aside id="ministries-img-sec">
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Warriors of the Dream</h2>
+			<article class="ministries-content">
+				<p>The Warriors of the Dream project is aimed at forming a healing and transformative community of youth in Harlem through dialogue, recreation, the arts and mentorship. All youth from elementary school to high school are welcome.</p>
+				<div style="clear: both;"></div>
+			</article>
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
 			<div id="container">
-			<img src="./pics/warriors.jpg" class="min-pic-warr">
+			<img src="./pics/warriors-thu.jpg" width="300" height="300" class="min-pic-warr pic-border">
 			</div>
 		</aside>
+    </div>
 
-<header></header>
+  </div>
+</div>
+		
 
-<!--  -->
+<header style="margin-bottom: 8px;"></header>
 
-<!--  -->
 
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Ecclesia Ministry</h2>
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Ecclesia Ministry</h2>
 			<article class="ministries-content">
 				<p>A coalition of churches, of which St. Philip's is one, conducts amonthly outdoor worship service in Marcus Garvey Park located on Madison between  E 120  and 124 Streets.  The host church makes and serves lunch for distribution after service in the park.</p><br>
 				<p>Outreach</p>
@@ -93,25 +101,102 @@
 				Dates for St. Philips are every third Sunday of the month. 
 
 				Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.</p>
+				<div style="clear: both;"></div>
 			</article>
-	</div>
-</section>
-
-		<aside id="ministries-img-sec">
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
 			<div id="container">
-			<img src="./pics/ecclesia.jpeg" class="min-pic-ecc">
+			<img src="./pics/ecclesia.jpeg" class="min-pic-ecc pic-border">
 			</div>
 		</aside>
+    </div>
+  </div>
+</div>
+	
+<!--  -->
 
-<header></header>
+
+
+<header style="margin-bottom: 8px;"></header>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Acolytes</h2>
+			<article class="ministries-content">
+				<p>Acoytes assist the priest on the altar and ensure the orderly and smooth progression of worship.<br>
+					<div style="clear: both;"></div>
+			</article>
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
+			<div id="container">
+			<img src="./pics/acolytes.jpg" width="300" height="400" class="min-pic-aco pic-border">
+			</div>
+		</aside>
+    </div>
+  </div>
+</div>
+
 
 <!--  -->
+
+
+
+<header style="margin-bottom: 8px;"></header>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Sunday School:</h2>
+			<article class="ministries-content">
+				<p>Children five to eighteen years old are taught Christian theology based on <span>The Book of Common Prayer</span> and <span>The Bible.</span><br>
+					<div style="clear: both;"></div>
+			</article>
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
+			<div id="container">
+			<img src="./pics/sundayschool.jpg" width="300" height="400" class="min-pic-sun pic-border">
+			</div>
+		</aside>
+    </div>
+  </div>
+</div>
+
+<!--  -->
+
+<header style="margin-bottom: 8px;"></header>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Women's Ministry</h2>
+			<article class="ministries-content">
+				<p>Fosters togetherness through worship, hospitality and fundraising for the betterment of the church and the community-at-large..</p>
+				<div style="clear: both;"></div>
+			</article>
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
+			<div id="container">
+			<img src="./pics/womens.jpg" width="400" height="300" class="min-pic-wom pic-border">
+			</div>
+		</aside>
+    </div>
+  </div>
+</div>
+
+<!--  -->
+
+<header style="margin-bottom: 8px;"></header>
 
 <section id="volunteerism">
 	<div class="container">
 		<h2 class="ministries-header">Candace Organization</h2>
 			<article class="ministries-content">
-				<p>collection of toiletries for the month of May<br>
+				<p>This organization fosters spiritual growth through service oriented activities within the church and the community-at-large. They also have a collection of toiletries for the month of May<br>
 			</article>
 	</div>
 </section>
@@ -119,58 +204,15 @@
 
 		<aside id="ministries-img-sec">
 			<div id="container">
-			<img src="placeholder">
+			<img src="placeholder" class="">
 			</div>
 		</aside>
-
-<header></header>
-
-
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Acolytes</h2>
-			<article class="ministries-content">
-				<p>Acoytes assist the priest on the altar and ensure the orderly and smooth progression of worship.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
-
-<!--  -->
-
+<header style="margin-bottom: 8px;"></header>
 <section id="volunteerism">
 	<div class="container">
 		<h2 class="ministries-header">Altar Guild</h2>
 			<article class="ministries-content">
 				<p>The Altar Guild are  lay persons entrusted with the responsibility of preparing the altar for all services and of caring for the communion vessels and elements for Holy Communion.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
-
-<!--  -->
-
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Candace Organization</h2>
-			<article class="ministries-content">
-				<p>This organization fosters spiritual growth through service oriented activities within the church and the community-at-large.<br>
 			</article>
 	</div>
 </section>
@@ -381,50 +423,6 @@
 			<img src="placeholder">
 			</div>
 		</aside>
-
-<header></header>
-
-<!--  -->
-
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Sunday School:</h2>
-			<article class="ministries-content">
-				<p>Children five to eighteen years old are taught Christian theology based on <span>The Book of Common Prayer</span> and <span>The Bible.</span><br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
-
-<!--  -->
-
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Women's Ministry</h2>
-			<article class="ministries-content">
-				<p>Fosters togetherness through worship, hospitality and fundraising for the betterment of the church and the community-at-large..<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
-
-<!--  -->
 <!-- Time End -->
 
 
