--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -25,7 +25,7 @@
 <body>
 <!-- Navigation Start -->
 <body>
-	<header style="border-bottom: 6px solid #f4f4f4;">
+	<header style="border-bottom: 6px solid #737373;">
 		<div class="container" >
 			<div id="branding" style="">
 				<img src="./logo/logorere-01.png" width="320" height="40" style="white-space:nowrap; float: left; position: relative; justify-content: end;">
