--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -85,7 +85,7 @@
 		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
 
-		<img src="./pics/garden.jpg" style="margin: auto; display: block;">
+		<img src="./pics/garden.jpg" class="pic-border" style="margin: auto; display: block;">
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
@@ -224,7 +224,7 @@
 		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
 
-		<img src="./pics/nave side.jpg" style="width:50%; height: 50%; margin: auto; text-align: center; image-orientation: 0deg; display: block; transform: rotate(90deg); margin-top: 10%;">
+		<img src="./pics/nave side.jpg" class="pic-border" style="width:50%; height: 50%; margin: auto; text-align: center; image-orientation: 0deg; display: block; transform: rotate(90deg); margin-top: 10%;">
 
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
@@ -304,7 +304,7 @@
 		<br>
 		Fees vary according to use. Please contact our Church Administrator, 212-862-4940.
 		</p>
-		<img src="./pics/sanct.jpg" style="width: 50%; margin: auto; text-align: center; display: block;">
+		<img src="./pics/sanct.jpg" class="pic-border" style="width: 50%; margin: auto; text-align: center; display: block;">
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
