--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -92,7 +92,7 @@
 		<h2 class="confirmation-header">CONFIRMATION</h2>
 			<article class="confirmation-content">
 				<p>Have a confirmation coming up? <br> <br>
-					Confirmation and reaffirmation are rites that area meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant. Confirmation is a declaration of faith and commitment to the Christian life made by someone who has already been baptized but who has now taken the decision ... </p>
+					Confirmation and reaffirmation are rites that area meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant. Confirmation is a declaration of faith and commitment to the Christian life made by someone who has already been baptized... </p>
 
 					<button id="myBtn-2" onclick="seemore2()">see more</button>
 			</article>
@@ -105,7 +105,7 @@
 <div id="myModal-2" class="modal-2">
 					  <div class="modal-content-2">
 					    <span onclick="close2()" class="close">&times;</span>
-					    <p> for her or himself to follow the way of Jesus and will take the vows of the Baptismal Covenant her or himself. Reaffirmation is for those who have been baptized and confirmed but who, for any number of reasons, want to intentionally renew their commitment to living a Christian life through study and renewal of the Baptismal Covenant vows once again. Both confirmation and reaffirmation involve strengthening by the Holy Spirit through prayer and the laying on of hands by a Bishop.
+					    <p> but who has now taken the decision for her or himself to follow the way of Jesus and will take the vows of the Baptismal Covenant her or himself. Reaffirmation is for those who have been baptized and confirmed but who, for any number of reasons, want to intentionally renew their commitment to living a Christian life through study and renewal of the Baptismal Covenant vows once again. Both confirmation and reaffirmation involve strengthening by the Holy Spirit through prayer and the laying on of hands by a Bishop.
 					    <br>
 					   	<br>
 					    Reception is for those from other denominations who want to formally be received as members into the Episcopal Church. Anyone from another Christian church, if they have been baptized with water and in the name of the Trinity, may become a baptized member of the Episcopal Church by having their baptism duly recorded in this church. Moreover, persons baptized in other traditions may also be received by laying on of hands by a bishop, if such persons have also already made an adult affirmation of faith in their baptized traditions. If they have not, then those persons may be confirmed in this church.</p>
@@ -144,7 +144,7 @@
 		<h2 class="anniversary-header">WEDDINGS</h2>
 			<article class="anniversary-content">
 				<p>Have a wedding coming up? <br> <br>
-					The Episcopal Church recognizes Holy Matrimony as a sacramental rite in which two people enter a lifelong union. They speak their vows before God and in the presence of the Church, receiving grace from God to help them fulfill the promises they have made. At its General Convention in 2015, the Church made the rites of Holy Matrimony accessible to same-sex as well as...
+					The Episcopal Church recognizes Holy Matrimony as a sacramental rite in which two people enter a lifelong union. They speak their vows before God and in the presence of the Church, receiving grace from God to help them fulfill the promises they have made. At its General Convention in 2015, the Church made the rites of Holy Matrimony...
 				</p>
 
 					<button id="myBtn-4" onclick="seemore4()">see more</button>
@@ -161,7 +161,7 @@
 					  <div class="modal-content-4">
 					    <span onclick="close4()" class="close">&times;</span>
 					    <p>  
-					    At its General Convention in 2015, the Church made the rites of Holy Matrimony accessible to same-sex as well as different-sex couples, and the Cathedral upholds that decision.
+					     accessible to same-sex as well as at its General Convention in 2015, the Church made the rites of Holy Matrimony accessible to same-sex as well as different-sex couples, and the Cathedral upholds that decision.
 					    <br>
 					   	<br>
 					    Couples who have a relationship with St. Philip's Church are encouraged to celebrate their marriage here. We welcome others to meet with the Rector to explore whether Saint John the Divine is the right place for your wedding.
