--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -247,7 +247,7 @@
 					on other special occasions.
 					</p>
 
-					<img src="pics/bells.png" class="pic-border" style="width:100%; height: 100%;">
+					<img src="pics/handbell.jpg" class="pic-border" style="width:100%; height: 100%;">
 					<hr>
 
 					<h3 class="mission-sub-border">The Organ of St. Philip’s</h3>
@@ -466,13 +466,10 @@
 		
 		<div class="vestry-role-top">
 			<h2 class="vestry-name fit">WARDENS</h2>
-			<br>
-			<br>
 			<h2 class="vestry-sub">Lisa Forte-Mason, Esq.</h2>
 			<h2 class="vestry-sub">Charles E. Williams, III</h2>
 		</div>
-
-		<br>
+<hr>
 
 		<div>
 			<h2 class="vestry-name fit">Vestry of St. Philips</h2>
@@ -480,6 +477,9 @@
 			Vestry Members: Class of 2018: Felix Okolo, Renee Parris-Scott and Ted Roulette <br>
 			Class of 2019: Neal Baker, Geneva Chase and Eric Hall <br>
 			Class of 2020: Erdene Kims, Rita Livingston and Jasmine Vaughan <br></p>
+
+			<hr>
+			
 			<h2 class="vestry-name fit">Vestry Standing Committees</h2>
 			<p>Buildings & Grounds: Garl Robinson & Randolph V. Jacobs, Jr., Member <br>
 			Stewardship: Rita Livingston</p>
@@ -521,89 +521,6 @@
 
 
 
-
-
-
-
-
-
-
-
-<!-- About Start -->
-<div id="wte-1" style="display: none;">
-	<div id="directions-img">
-		<div class="container">
-			<section id="services">
-				<ul>
-					<li><a style="cursor: pointer;" onclick="services()">SERVICES</a></li>
-					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
-					<li><a style="cursor: pointer;" onclick="staff()">STAFF</a></li>
-					<!-- <li><a style="cursor: pointer;" onclick="wte()" class="active-service">
-					WHAT TO EXPECT</a></li>
-					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
-				</ul>
-			</section>
-		</div>
-	</div>
-<!-- About End -->
-
-<!-- What to Expect -->
-<section>
-	<div class="container">
-		<h2 class="mission-header mission-header-green wte-head">What To Expect
-			</h2>
-		<p class="mission-top-sub about-sub">
-			At 9am,  We offer a said service of Holy Eucharist; that is, a spoken worship service of Holy Eucharist (Communion) with prayers and a sermon but without hymns or music. This service is often attractive to those who prefer and/or who wish, from time to time, to experience a more contemplative service of prayer and reflection.
-			<br><br>
-			At 11:00am, We offer a choral Holy Eucharist, which features hymns led by one of our choirs, and which periodically includes the use of incense and communal chanting of certain sections of the worship service. Specifically, worship is led by the Chancel Choir on the first, second and fourth Sundays and by the Voices of Praise contemporary choir on the third and fifth Sundays.
-		</p>
-	</div>
-</section>
-</div>
-<!-- What to Expect End -->
-
-
-
-
-
-
-
-
-<!-- About Start -->
-<div id="gar-1" style="display: none;">
-	<div id="directions-img">
-		<div class="container">
-			<section id="services">
-				<ul>
-					<li><a style="cursor: pointer;" onclick="services()">SERVICES</a></li>
-					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
-					<li><a style="cursor: pointer;" onclick="staff()">STAFF</a></li>
-					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
-					<li><a style="cursor: pointer;" onclick="gar()" class="active-service">GARDEN</a></li> -->
-				</ul>
-			</section>
-		</div>
-	</div>
-<!-- About End -->
-
-<!-- What to Expect -->
-<section>
-	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Courtyard Garden
-			</h2>
-		<p class="mission-top-sub about-sub">			
-		The St. Philip’s courtyard garden is a peaceful oasis from the bustling sights and
-		sounds of the city. Amidst trees and flowers, birds and squirrels the garden
-		provides a additional variety of sanctuary to contemplate God’s loving nature and
-		presence in the quiet stillness. The garden is a resource for all the community
-		and access is granted weekdays during parish office hours as well as before,
-		during and after Sunday worship services. You can schedule a special program
-		or event in the garden by contacting theParish Administrator.
-		</p>
-	</div>
-</section>
-</div>
-<!-- What to Expect End -->
 
 
 
