--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -35,6 +35,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="current dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="about.html">INFO</a>
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
@@ -91,9 +92,11 @@
 					<br>
 					</p>
 					<h3 class="mission-sub-border">A Liturgical Church</h3>
+					<br>
 					<p>
 					St. Philip’s is a liturgical church, which means we follow fixed orders of service, known as liturgies, which are found in the Book of Common Prayer. The Eucharist is the primary focus of our Sunday worship. The Revised Common Lectionary provides the schedule of Bible Lessons and Psalms to be read on specified days throughout the Church Year.
 					</p>
+					<br>
 					<h3 class="mission-sub-border">What to Expect on Sunday</h3>
 					<br>
 					<p>St. Philip’s is a diverse, inclusive community committed to welcoming all, praying together, serving our brothers and sisters in need and sharing fellowship.
@@ -110,23 +113,28 @@
 					<p>At 9am, We offer a said service of Holy Eucharist; that is, a spoken worship service of Holy Eucharist (Communion) with prayers and a sermon but without hymns or music. This service is often attractive to those who prefer and/or who wish, from time to time, to experience a more contemplative service of prayer and reflection.</p>
 
 					<p>At 11:00am, We offer a choral Holy Eucharist, which features hymns led by one of our choirs, and which periodically includes the use of incense and communal chanting of certain sections of the worship service. Specifically, worship is led by the Chancel Choir on the first, second and fourth Sundays and by the Voices of Praise contemporary choir on the third and fifth Sundays.</p>
+					<br>
 					<h3 class="mission-sub-border">The Service Bulletin, The Book of Common Prayer, The Hymnal 1982 and LEVAS 
 						<br>(Lift Every Voice and Sing)</h3>
+					<br>
 					<p>
 					Our weekly service bulletin provides an outline of the service with page references to the Book of Common Prayer and the Hymnal 1982 and LEVAS to enable you to follow the order of service. You will find a friendly community at St. Philip’s—if you need help finding your place in the service, just ask anyone seated around you. They will be happy to help you!
 					</p>
+					<br>
 					<h3 class="mission-sub-border">The Sign of the Cross</h3>
+					<br>
 					<p>
 					Many people at St. Philip’s follow the ancient custom of making the sign of the cross at various points in the service, in remembrance of their Baptism.
 					</p>
-					<h3 class="mission-sub-border">Two Sunday Morning Services</h3> 
-						<br>and Christian Education</h3>
+					<br>
+					<h3 class="mission-sub-border">Two Sunday Morning Services and Christian Education</h3> 
 					<br>
 					<p>Our 9 a.m. service is the smaller of our two Sunday services, and it is done without music. The 11:00 a.m. service, our main service, is a Choral Eucharist with the St. Philip’s Choir (during the academic year), or with music by small ensembles (during the summer months). The congregation joins in the hymns and canticles at the 11:00 a.m. liturgy, and you will find us to be good singers!
 					<br>
 					<br>
 					Church School (for children) takes place during the first half of the 11:00 a.m. Eucharist; the children then join their families in church after the sermon to participate in the remainder of the service. Ask an usher to direct you to the Church School classrooms. Parents are also welcome to bring their children to church for the entire service.
 					</p>
+					<br>
 				</article>
 		</div>
 	</section>
@@ -267,10 +275,9 @@
 					Chancel strongly supports congregational singing. In addition, the sounds of the
 					instrument so perfectly fill the church that if one is in the Choir Room, below the
 					main church and quite far from the organ, the delicate, bright sounds of just the 8′
-					and 4′ flutes in the Choir Division can be clearly heard-almost as if they are in the
-					room!
+					and 4′ flutes in the Choir Division can be clearly heard-almost as if they are in theroom!
 					</p>
-					<br>
+					<hr>
 					<p>As well, a Trompette-en-Chamade speaks dramatically from the rear of the nave.
 					This elegant stop is considered by many to be the first set of such pipes installed
 					by Mr. Harrison in this country.
@@ -467,20 +474,20 @@
 		<div class="vestry-role-top">
 			<h2 class="vestry-name fit">WARDENS</h2>
 			<h2 class="vestry-sub">Lisa Forte-Mason, Esq.</h2>
-			<h2 class="vestry-sub">Charles E. Williams, III</h2>
+			<h2 class="vestry-sub">Beverly Brown</h2>
 		</div>
 <hr>
 
 		<div>
-			<h2 class="vestry-name fit">Vestry of St. Philips</h2>
-			<p>Wardens: Lisa Forte-Mason, and Beverly Brown <br>
+			<h2 class="vestry-name fit">VESTRY OF ST. PHILIP'S</h2>
+			<p >
 			Vestry Members: Class of 2018: Felix Okolo, Renee Parris-Scott and Ted Roulette <br>
 			Class of 2019: Neal Baker, Geneva Chase and Eric Hall <br>
-			Class of 2020: Erdene Kims, Rita Livingston and Jasmine Vaughan <br></p>
+			Class of 2020: Erdene Kims, Rita Livingston and Jasmine Vaughan-Atkinson <br></p>
 
 			<hr>
-			
-			<h2 class="vestry-name fit">Vestry Standing Committees</h2>
+
+			<h2 class="vestry-name fit">VESTRY STANDING COMMITTEES</h2>
 			<p>Buildings & Grounds: Garl Robinson & Randolph V. Jacobs, Jr., Member <br>
 			Stewardship: Rita Livingston</p>
 
