--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -40,6 +40,7 @@
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
+    						<a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="giving.html">Giving</a></li>
@@ -151,7 +152,8 @@
 			</article>
 
 			<div id="actual-c-button">
-				<button id="anniversary-button" type="button" class="btn btn-primary btn-lg anniversary-button">CONTACT</button>
+				<a href="href="mailto:st_philips_church@yahoo.com"">CONTACT</a>
+				
 			</div>
 
 	</div>
