--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -41,6 +41,7 @@
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
+    						<a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li class="current"><a href="giving.html">Giving</a></li>
@@ -141,10 +142,13 @@
 </div>
 </div>
 
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="volunteer-header">VOLUNTEERISM</h2>
-			<article class="volunteer-content">
+
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+     	<h2 class="volunteer-header">VOLUNTEERISM</h2>
+			<article class="volunteer-content" style="width: 50%;">
 				<p>Indeed, the giving of time is also an important aspect of stewardship that should not be overlooked. If
 				you are interested in exploring ways to give of your time at St. Philip’s, please look at ourestablished
 				ministries to find one that may be right for you. Additionally, announcements for service opportunities
@@ -153,18 +157,23 @@
 				</p>
 
 			</article>
-						<div id="actual-v-button">
+				<div id="actual-v-button">
 					<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">JOIN</button>
 				</div>
 
-	</div>
-</section>
-
-		<aside id="volunteerism-img-sec">
+		<div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
 			<div id="container">
-			<img src="./staff/gsilver.jpg">
+			<img src="./pics/volun.jpg" width="500" height="300" class="min-pic-warr pic-border">
 			</div>
+			<div style="clear: both;"></div>
 		</aside>
+    </div>
+
+    </div>
+
+  </div>
+</div>
 
 <header></header>
 
