--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -39,6 +39,7 @@
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
+    						<a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="giving.html">Giving</a></li>
@@ -95,7 +96,7 @@
      <h2 class="ministries-header">Ecclesia Ministry</h2>
 			<article class="ministries-content">
 				<p>A coalition of churches, of which St. Philip's is one, conducts amonthly outdoor worship service in Marcus Garvey Park located on Madison between  E 120  and 124 Streets.  The host church makes and serves lunch for distribution after service in the park.</p><br>
-				<p>Outreach</p>
+				<p style="font-weight: bolder;">Outreach</p>
 				<p>Ecclesia Ministry @ Marcus Garvey Park: - Madison Avenue @ E 120 Street to 124 Street. 
 
 				Dates for St. Philips are every third Sunday of the month. 
