--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -25,10 +25,10 @@
 <body>
 <!-- Navigation Start -->
 <body>
-	<header style="border-bottom: 6px solid #737373;">
+	<header id="top-bot-border">
 		<div class="container" >
-			<div id="branding" style="">
-				<img src="./logo/logorere-01.png" width="320" height="40" style="white-space:nowrap; float: left; position: relative; justify-content: end;">
+			<div id="branding">
+				<img src="./logo/logorere-01.png" width="320" height="40" id="logo-main">
 			</div>
 			<nav>
 				<ul>
@@ -163,6 +163,7 @@
 			</div>
 		</section>
 
+<a href="#vision"><img class="down" src="arrow.png" style="right: 5%;"></a>
 
 <!-- Footer End -->
 <!-- <a href="#mission"><p class="mission">MISSION</p>
