--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -127,7 +127,8 @@
 					Many people at St. Philip’s follow the ancient custom of making the sign of the cross at various points in the service, in remembrance of their Baptism.
 					</p>
 					<br>
-					<h3 class="mission-sub-border">Two Sunday Morning Services and Christian Education</h3> 
+					<h3 class="mission-sub-border">Two Sunday Morning Services 
+												<br>and Christian Education</h3> 
 					<br>
 					<p>Our 9 a.m. service is the smaller of our two Sunday services, and it is done without music. The 11:00 a.m. service, our main service, is a Choral Eucharist with the St. Philip’s Choir (during the academic year), or with music by small ensembles (during the summer months). The congregation joins in the hymns and canticles at the 11:00 a.m. liturgy, and you will find us to be good singers!
 					<br>
