--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -100,7 +100,7 @@
 				<h2 class="confirmation-header">CONFIRMATION</h2>
 				<article class="confirmation-content">
 					<p>Have a confirmation coming up? <br> <br>
-						Confirmation and reaffirmation are rites that area meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant. Confirmation is a declaration of faith and commitment to the Christian life made by someone who has already been baptized but who has now taken the decision for her or himself to follow the way of Jesus and will take the vows of the Baptismal Covenant her or himself. Reaffirmation is for those who have been baptized and confirmed but who, for any number of reasons, want to intentionally renew their commitment to living a Christian life through study and renewal of the Baptismal Covenant vows once again. 
+						Confirmation and reaffirmation are rites that area meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant.
 					</p>
 						<button id="myBtn-2" onclick="seemore2()">see more</button>
 				</article>
